--- a/FireBaseDemo/insuranceCompany_login.html
+++ b/FireBaseDemo/insuranceCompany_login.html
@@ -78,6 +78,9 @@
 						</div>
 
 						<div>
+							<a href="https://qi-xiang.github.io/ProjectWebsite/" class="txt1">
+								返回首頁 /
+							</a>
 							<a href="#" class="txt1 InfoNeedNow">使用須知</a>
 						</div>
 					</div>
