--- a/FireBaseDemo/login_seperation.html
+++ b/FireBaseDemo/login_seperation.html
@@ -50,7 +50,7 @@
                     </li>
                     <li class="nav-item">
                         <div class="cool-link">
-                            <a class="nav-link" href="#">公開統計數據</a>
+                            <a class="nav-link" href="https://qi-xiang.github.io/NCU_Project_Demo/FireBaseDemo/publicData.html">公開統計數據</a>
                         </div>
                     </li>
                     <li class="nav-item active">
