--- a/FireBaseDemo/resetPassword.html
+++ b/FireBaseDemo/resetPassword.html
@@ -61,7 +61,7 @@
         <div class="wrap-login100">
           <div
             class="login100-form-title"
-            style="background-image: url(images/bg-01.png)"
+            style="background-image: url(https://picsum.photos/id/1050/1024/768);"
           >
             <span class="login100-form-title-1"> 忘記密碼 </span>
           </div>
