--- a/FireBaseDemo/publicData.html
+++ b/FireBaseDemo/publicData.html
@@ -288,10 +288,10 @@
   <!---->
 
   <!-- Back to top button -->
-  <a type="button" class="btn btn-danger btn-floating btn-lg" data-toggle="tooltip" data-placement="top" id="btn-api-info" title="資料說明">
+  <a href="https://qi-xiang.github.io/NCU_Project_Demo/FireBaseDemo/%E5%85%AC%E9%96%8B%E8%B3%87%E6%96%99%E8%AA%AA%E6%98%8E%E6%9B%B8%EF%BC%8D%E7%AC%AC1%E7%89%88.pdf" target="_blank" type="button" class="btn btn-danger btn-floating btn-lg" data-toggle="tooltip" data-placement="top" id="btn-api-info" title="公開資料說明書">
     <i class="fa-solid fa-file-pdf"></i>
   </a>
-  <a href="https://qi-xiang.github.io/NCU_Project_Demo/FireBaseDemo/ApiTestCompressed.json" target="_blank" type="button" class="btn btn-danger btn-floating btn-lg" data-toggle="tooltip" data-placement="top" id="btn-api-json" title="JSON資料">
+  <a href="https://qi-xiang.github.io/NCU_Project_Demo/FireBaseDemo/ApiTestCompressed.json" target="_blank" type="button" class="btn btn-danger btn-floating btn-lg" data-toggle="tooltip" data-placement="top" id="btn-api-json" title="公開資料(JSON)">
     <i class="fa-solid fa-file-arrow-down"></i>
   </a>
   <button type="button" class="btn btn-danger btn-floating btn-lg" data-toggle="tooltip" data-placement="top" id="btn-api" title="公開資料集">
