--- a/FireBaseDemo/insuranceCompany_UserProfile.html
+++ b/FireBaseDemo/insuranceCompany_UserProfile.html
@@ -90,7 +90,7 @@
             <p class="text-muted mb-1">歡迎使用</p>
             <p class="text-muted mb-4">機車行車安全系統</p>
             <div class="d-flex justify-content-center mb-2">
-              <button type="button" class="btn btn-primary user_logout" style="opacity: 0;">登出</button>
+              <button type="button" class="btn btn-primary user_logout" style="opacity: 0;display: none;">登出</button>
             </div>
           </div>
         </div>
