--- a/FireBaseDemo/user_profile.html
+++ b/FireBaseDemo/user_profile.html
@@ -197,7 +197,7 @@
       </div>
 
 
-      <div class="table-responsive" style="padding: 0 3% 0 3%;">
+      <div class="table-responsive" style="padding: 0 3% 30px 3%;">
         <table id="table-demo" class="journey-table table table-hover table-borderless" style="padding-bottom: 10px;">
           <thead>
             <tr>
@@ -547,10 +547,14 @@
 <script src="https://www.gstatic.com/firebasejs/8.0.1/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.0.1/firebase-auth.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.0.1/firebase-database.js"></script>
+<!--dataTable-->
+<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.12.1/css/dataTables.bootstrap4.min.css">
+<script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.js"></script>
+<script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.12.1/js/dataTables.bootstrap4.min.js"></script>
 <!--<link href="src/css/snowfall.css" rel="stylesheet" />-->
 <link href="src/css/user_profile.css" rel="stylesheet" />
 <link href="src/css/dashboard.css" rel="stylesheet" />
-<script type="module" src="src/js/min_js/user_profile.min.js"></script>
+<script type="module" src="src/js/min_js/user_profile2.min.js"></script>
 <link href="https://code.jquery.com/ui/1.13.1/themes/ui-lightness/jquery-ui.css" rel="stylesheet" />
 <script type="module" src="src/js/min_js/dataVisualization.min.js"></script>
 <script type="module" src="src/js/min_js/other_data.min.js"></script>
