--- a/FireBaseDemo/Government.html
+++ b/FireBaseDemo/Government.html
@@ -19,7 +19,7 @@
     <button type="button" class="btn btn-danger btn-floating btn-lg" id="btn-back-to-top">
         <i class="fas fa-arrow-up"></i>
     </button>
-    
+
     <div class="container-fluid navbar-container sticky-top">
         <nav class="navbar navbar-expand-lg navbar-dark custom-navbar">
             <a class="navbar-brand" href="https://qi-xiang.github.io/ProjectWebsite/">BykE</a>
@@ -50,7 +50,8 @@
                     </li>
                     <li class="nav-item">
                         <div class="cool-link">
-                            <a class="nav-link" href="https://qi-xiang.github.io/NCU_Project_Demo/FireBaseDemo/publicData.html">公開統計數據</a>
+                            <a class="nav-link"
+                                href="https://qi-xiang.github.io/NCU_Project_Demo/FireBaseDemo/publicData.html">公開統計數據</a>
                         </div>
                     </li>
                     <li class="nav-item active">
@@ -257,6 +258,7 @@
         border-top: 2px solid #222F33;
         width: 100px;
     }
+
     /*data table*/
     .dataTables_info {
         padding-top: 0 !important;
@@ -281,6 +283,21 @@
     .dataTables_paginate {
         padding-top: 5px !important;
         padding-right: 15px !important;
+    }
+
+    #table-demo th:nth-child(2),
+    #table-demo th:nth-child(5){
+        pointer-events: none !important;
+    }
+
+    #table-demo .sorting:nth-child(2)::after,
+    #table-demo .sorting:nth-child(2)::before {
+        display: none;
+    }
+
+    #table-demo .sorting:nth-child(5)::after,
+    #table-demo .sorting:nth-child(5)::before {
+        display: none;
     }
 </style>
 
