--- a/FireBaseDemo/login_seperation.html
+++ b/FireBaseDemo/login_seperation.html
@@ -96,7 +96,7 @@
                 <hr class="section-divider" />
                 <p class="section-description">請依需求點擊下方按鈕前往登入頁面。</p>
             </div>
-            <div class="col-12 col-md-4 col-xl-3 d-flex justify-content-center mb-5">
+            <!--<div class="col-12 col-md-4 col-xl-3 d-flex justify-content-center mb-5">
                 <div class="card" style="width: 18rem">
                     <img src="https://picsum.photos/id/1043/1024/640" class="card-img-top" alt="..." />
                     <div class="card-body text-center">
@@ -107,7 +107,7 @@
                         <a href="Government_login.html" class="btn btn-primary">前往登入頁</a>
                     </div>
                 </div>
-            </div>
+            </div>-->
             <div class="col-12 col-md-4 col-xl-3 d-flex justify-content-center mb-5">
                 <div class="card" style="width: 18rem">
                     <img src="https://picsum.photos/id/1039/1024/640" class="card-img-top" alt="..." />
