--- a/FireBaseDemo/insuranceCompany_login.html
+++ b/FireBaseDemo/insuranceCompany_login.html
@@ -48,12 +48,11 @@
 						<span class="label-input100">公司名稱</span>
 						<select class="input100" name="CompanyName" id="CompanyName" style="margin-top: 11px;">
 							<option value="default">請選擇公司</option>
-							<option value="TaiwanLife">臺灣人壽</option>
-							<option value="ChinaLife">中國人壽</option>
-							<option value="CathayLife">國泰人壽</option>
-							<option value="NanShanLife">南山人壽</option>
+							<option value="ShinkongInsurance">新光產險</option>
+							<option value="NanShanInsurance">南山產險</option>
+							<option value="CathayCenturyInsurance">國泰產險</option>
+							<option value="FubonInsurance">富邦產險</option>
 						</select>
-
 					</div>
 
 					<div class="wrap-input100 validate-input m-b-18" data-validate="公司編號必填">
