--- a/FireBaseDemo/insuranceCompany_UserProfile.html
+++ b/FireBaseDemo/insuranceCompany_UserProfile.html
@@ -207,6 +207,7 @@
               <th scope="col">速度資料</th>
               <th scope="col">行程總時間</th>
               <th scope="col">行程安全分數</th>
+              <th scope="col">資料下載</th>
             </tr>
           </thead>
           <tbody class="journey-table-tbody">
