--- a/FireBaseDemo/user_profile.html
+++ b/FireBaseDemo/user_profile.html
@@ -555,7 +555,7 @@
 <!--<link href="src/css/snowfall.css" rel="stylesheet" />-->
 <link href="src/css/user_profile.css" rel="stylesheet" />
 <link href="src/css/dashboard.css" rel="stylesheet" />
-<script type="module" src="src/js/min_js/user_profile2.min.js"></script>
+<script type="module" src="src/js/user_profile3.js"></script>
 <link href="https://code.jquery.com/ui/1.13.1/themes/ui-lightness/jquery-ui.css" rel="stylesheet" />
 <script type="module" src="src/js/min_js/dataVisualization.min.js"></script>
 <script type="module" src="src/js/min_js/other_data.min.js"></script>
