--- a/FireBaseDemo/InsuranceCompany.html
+++ b/FireBaseDemo/InsuranceCompany.html
@@ -152,7 +152,7 @@
     <script type="text/javascript" charset="utf8"
         src="https://cdn.datatables.net/1.12.1/js/dataTables.bootstrap4.min.js"></script>
     <script src="src/js/backToTop.js"></script>
-    <script type="module" src="src/js/min_js/insurance_company2.min.js"></script>
+    <script type="module" src="src/js/insurance_company2.js"></script>
 </body>
 
 <style>
