--- a/FireBaseDemo/insuranceCompany_login.html
+++ b/FireBaseDemo/insuranceCompany_login.html
@@ -48,10 +48,10 @@
 						<span class="label-input100">公司名稱</span>
 						<select class="input100" name="CompanyName" id="CompanyName" style="margin-top: 11px;">
 							<option value="default">請選擇公司</option>
-							<option value="ShinkongInsurance">新光產險</option>
-							<option value="NanShanInsurance">南山產險</option>
-							<option value="CathayCenturyInsurance">國泰產險</option>
-							<option value="FubonInsurance">富邦產險</option>
+							<option value="TaiwanLife">新光產險</option>
+							<option value="NanShanLife">南山產險</option>
+							<option value="CathayLife">國泰產險</option>
+							<option value="ChinaLife">富邦產險</option>
 						</select>
 					</div>
 
@@ -125,7 +125,7 @@
 <script src="https://www.gstatic.com/firebasejs/8.0.1/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.0.1/firebase-auth.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.0.1/firebase-database.js"></script>
-<script type="module" src="src/js/min_js/insuranceCompany_login.min.js"></script>
+<script type="module" src="src/js/insuranceCompany_login.js"></script>
 <style>
 	div.ui-widget-header {
 		background: #57B846;
