--- a/FireBaseDemo/publicData.html
+++ b/FireBaseDemo/publicData.html
@@ -341,8 +341,8 @@
 <script src="src/js/backToTop.js"></script>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-<script type="module" src="src/js/min_js/publicData.min.js"></script>
-<script type="module" src="src/js/min_js/other_data.min.js"></script>
+<script type="module" src="src/js/publicData.js"></script>
+<script type="module" src="src/js/other_data.js"></script>
 <style>
   .c3-legend-item {
     font-size: 13px;
