--- a/FireBaseDemo/Government.html
+++ b/FireBaseDemo/Government.html
@@ -152,7 +152,7 @@
         src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.js"></script>
     <script type="text/javascript" charset="utf8"
         src="https://cdn.datatables.net/1.12.1/js/dataTables.bootstrap4.min.js"></script>
-    <script type="module" src="src/js/min_js/government2.min.js"></script>
+    <script type="module" src="src/js/government2.js"></script>
 </body>
 <style>
     a:hover {
