--- a/FireBaseDemo/Government_login.html
+++ b/FireBaseDemo/Government_login.html
@@ -111,7 +111,7 @@
 <script src="https://www.gstatic.com/firebasejs/8.0.1/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.0.1/firebase-auth.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.0.1/firebase-database.js"></script>
-<script type="module" src="src/js/min_js/government_login.min.js"></script>
+<script type="module" src="src/js/government_login.js"></script>
 <style>
 	div.ui-widget-header {
 		background: #57B846;
